# agents_trace

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4e85d2a27327_initial_schema_runs_spans_tool_calls_.py
backend/app/: config.py  database.py  events.py  main.py  worker.py
backend/app/models/: __init__.py  models.py
demo/: __init__.py  pyproject.toml  research_workflow.py  run.py  tools.py
sdk/: pyproject.toml
sdk/agents_trace/: __init__.py  decorator.py  langgraph_handler.py  tracer.py
tests/: conftest.py  test_demo.py  test_health.py  test_sdk.py  test_smoke.py  test_worker.py
