[project]
name = "agents-trace"
version = "0.1.0"
description = "Multi-Agent Observability Platform"
requires-python = ">=3.11"

# Workspace members are installed separately via their own pyproject.toml.
# This root pyproject provides the dev tooling entrypoint.
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.uv.workspace]
members = ["sdk", "backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "alembic/",
]

[[tool.mypy.overrides]]
module = "backend.app.models.models"
# SQLAlchemy DeclarativeBase subclassing is not fully typed
disallow_subclassing_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
omit = [
    "tests/*",
    "alembic/*",
    "*/__init__.py",
]
