[project]
name = "agents-trace-demo"
version = "0.1.0"
description = "Demo multi-agent LangGraph workflow for agents-trace"
requires-python = ">=3.11"
dependencies = [
    "agents-trace-sdk",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["demo"]
