[project]
name = "agents-trace-sdk"
version = "0.1.0"
description = "Instrumentation SDK for agents-trace"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents_trace"]
